--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Redirecting...</title>
+  <title>Page Not Found</title>
   <style>
     body {
       background-color: black;
@@ -23,14 +23,6 @@
       font-size: 18px;
     }
   </style>
-  <script>
-    // Check if URL contains "/casino"
-    if (!window.location.pathname.includes('/casino')) {
-      setTimeout(() => {
-        window.location.href = "https://juju.wtf";
-      }, 2000);
-    }
-  </script>
 </head>
 <body>
   <h1>This Page Does Not Exist :(</h1>
