--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
   <div class="container">
     <img src="https://github.com/jujuexe/fr/raw/refs/heads/main/94615d1dab33e63c79d8e5f905ea2843.webp" alt="pfp" class="pfp">
     <div class="title">juju.wtf</div>
-    <a href="https://discordlookup.com/user/202198605816135680" class="discord-logo" aria-label="discord">discord</a>
+    <a href="https://discord.gg/UfVueQFRcD" class="discord-logo" aria-label="discord">discord</a>
   </div>
 
   <div id="audio-controls">
