--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- FavIcon -->
+
   <link rel="icon" type="image/png" href="https://github.com/jujuexe/fr/blob/main/980195a4b420a62cfca4fa7450db7ab7.png?raw=true" />
 
-  <!-- Open Graph Meta (for Discord / Twitter embeds) -->
   <meta property="og:url" content="https://juju.wtf/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="JuJu">
@@ -56,7 +55,7 @@
       overflow: hidden;
     }
 
-    /* Background video setup */
+
     #background-video {
       position: fixed;
       top: 0;
@@ -64,7 +63,7 @@
       width: 100vw;
       height: 100vh;
       object-fit: cover;
-      z-index: -1; /* Behind everything */
+      z-index: -1; 
     }
 
     .intro-screen {
@@ -176,7 +175,7 @@
 <body>
   <div class="intro-screen glow" id="intro-screen">click to enter</div>
 
-  <!-- Background video used as audio -->
+
   <video autoplay loop id="background-video" muted>
     <source src="https://r2.guns.lol/e3afb2ac-1ef1-41e8-b693-f290de7c85ec.mp4" type="video/mp4">
   </video>
