--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="refresh" content="1; url=https://juju.wtf"> <!-- Redirects after 1 second -->
   <title>Page Not Found</title>
   <style>
     body {
