--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
 
   <video autoplay loop id="background-video" muted>
-    <source src="https://r2.guns.lol/e3afb2ac-1ef1-41e8-b693-f290de7c85ec.mp4" type="video/mp4">
+    <source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/youtube_pEWB_PqmNpE_1920x1080_h264%20(1)%20(1).mp4" type="video/mp4">
   </video>
 
   <div class="container">
