--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
   <link rel="icon" type="image/png" href="https://github.com/jujuexe/fr/blob/main/980195a4b420a62cfca4fa7450db7ab7.png?raw=true" />
 
   <meta property="og:url" content="https://juju.wtf/">
@@ -11,7 +10,7 @@
   <meta property="og:image" content="https://github.com/jujuexe/fr/blob/main/980195a4b420a62cfca4fa7450db7ab7.png?raw=true" />
 
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>♡ juju.lol</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
@@ -55,7 +54,6 @@
       overflow: hidden;
     }
 
-
     #background-video {
       position: fixed;
       top: 0;
@@ -63,7 +61,7 @@
       width: 100vw;
       height: 100vh;
       object-fit: cover;
-      z-index: -1; 
+      z-index: -1; /* Keep video in background */
     }
 
     .intro-screen {
@@ -80,7 +78,7 @@
       font-size: 2rem;
       cursor: pointer;
       transition: opacity .5s ease;
-      z-index: 100;
+      z-index: 100; /* Ensure intro screen is on top */
     }
 
     .intro-screen:hover {
@@ -98,7 +96,7 @@
       left: 50%;
       transform: translate(-50%, -50%);
       text-align: center;
-      z-index: 10;
+      z-index: 10; /* Ensure container is above video */
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -151,7 +149,7 @@
       text-align: center;
       opacity: 0;
       animation: fadeIn 1s ease-out forwards;
-      z-index: 10;
+      z-index: 10; /* Ensure controls are above video */
     }
 
     #pause-button {
@@ -175,8 +173,7 @@
 <body>
   <div class="intro-screen glow" id="intro-screen">click to enter</div>
 
-
-  <video autoplay loop id="background-video" muted>
+  <video id="background-video" muted playsinline>
     <source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/youtube_pEWB_PqmNpE_1920x1080_h264%20(1)%20(1).mp4" type="video/mp4">
   </video>
 
@@ -198,14 +195,18 @@
 
     introScreen.addEventListener('click', function () {
       this.classList.add('hidden');
-      video.muted = false;
-      video.play();
+      video.play().catch((error) => {
+        console.error('Video playback failed:', error);
+      });
+      video.muted = false; // Unmute after user interaction
     });
 
     let isPaused = false;
     pauseButton.addEventListener('click', () => {
       if (isPaused) {
-        video.play();
+        video.play().catch((error) => {
+          console.error('Video playback failed:', error);
+        });
         pauseButton.textContent = 'pause';
       } else {
         video.pause();
