--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>♡ juju.lol</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <script>
-    let titleText = "juju.wtf ";
+    let titleText = "❤ juju.wtf ❤";
     let index = 0;
     setInterval(() => {
       document.title = titleText.slice(index) + titleText.slice(0, index);
