--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 <body>
   <button class="intro-screen glow" id="intro-screen" aria-label="Enter site">click to enter</button>
   <video id="background-video" playsinline webkit-playsinline loop preload="metadata">
-    <source src="https://pub-3bfa94b368d34d7e839934cc455b9712.r2.dev/flxrosamason.mp4" type="video/mp4">
+    <source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/0422%20(1).mp4" type="video/mp4">
   </video>
   <div class="container">
     <img src="https://github.com/jujuexe/fr/raw/refs/heads/main/94615d1dab33e63c79d8e5f905ea2843.webp" alt="pfp" class="pfp">
