--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <link rel="icon" type="image/png" href="https://github.com/jujuexe/fr/blob/main/980195a4b420a62cfca4fa7450db7ab7.png?raw=true">
-  <meta property="og:url" content="https://juju.wtf/">
+  <meta property="og:url" content="https://JuJu.wtf/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="JuJu">
   <meta property="og:description" content="hai person">
@@ -12,13 +12,13 @@
   <title>♡ juju.lol</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <script>
-    let titleText = "💖 juju.wtf";
+    let titleText = "💖 JuJu.wtf";
     let index = 0;
     setInterval(() => {
       document.title = titleText.slice(index) + titleText.slice(0, index);
       index = (index + 1) % titleText.length;
     }, 200);
-    const messages = ["hai :3", "juju.wtf"];
+    const messages = ["hai :3", "JuJu.wtf"];
     let msgIndex = 0;
     setInterval(() => {
       const titleElement = document.querySelector('.title');
@@ -161,7 +161,7 @@
   </video>
   <div class="container">
     <img src="https://pub-3bfa94b368d34d7e839934cc455b9712.r2.dev/ec8682c3a3959691f9506c79de83c2f0.png" alt="pfp" class="pfp">
-    <div class="title">juju.wtf</div>
+    <div class="title">JuJu.wtf</div>
     <a href="https://discord.gg/UfVueQFRcD" class="discord-logo" aria-label="discord">discord</a>
   </div>
   <div id="audio-controls">
