--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   </div>
   <div id="audio-controls">
     <div id="song-title">Now Playing: Flxr</div>
-    <button id="pause-button">Pause</button>
+    <button id="pause-button">Pause ⏯️</button>
   </div>
   <script>
     const introScreen = document.getElementById('intro-screen');
