--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   </div>
   <div id="audio-controls">
     <div id="song-title">Now Playing: Flxr</div>
-    <button id="pause-button">pause</button>
+    <button id="pause-button">Pause ⏯</button>
   </div>
   <script>
     const introScreen = document.getElementById('intro-screen');
@@ -184,10 +184,10 @@
         video.play().catch(error => {
           console.error('Video playback failed:', error);
         });
-        pauseButton.textContent = 'pause';
+        pauseButton.textContent = 'Pause ⏯';
       } else {
         video.pause();
-        pauseButton.textContent = 'play';
+        pauseButton.textContent = 'Play ⏯';
       }
       isPaused = !isPaused;
     });
