--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       index = (index + 1) % titleText.length;
     }, 200);
 
-    const messages = ["hai :3", "JuJu.wtf"];
+    const messages = ["haiii :3", "JuJu.wtf"];
     let msgIndex = 0;
     setInterval(() => {
       const titleElement = document.querySelector('.title');
