--- a/index.html
+++ b/index.html
@@ -129,19 +129,19 @@
     }
     .discord-tooltip {
       position: absolute;
-      bottom: 130%;
+      bottom: 125%;
       left: 50%;
       transform: translateX(-50%);
       background: rgba(0, 0, 0, 0.75);
       color: #fff;
-      padding: 6px 12px;
-      border-radius: 8px;
+      padding: 4px 8px;
+      border-radius: 6px;
       white-space: nowrap;
       opacity: 0;
       pointer-events: none;
       transition: opacity 0.3s ease;
-      text-shadow: 0 0 5px #fff, 0 0 15px #ff69b4;
-      font-size: 0.9rem;
+      font-size: 0.7rem;
+      text-shadow: 0 0 3px #fff, 0 0 10px #ff69b4;
     }
     .discord-wrapper:hover .discord-tooltip {
       opacity: 1;
@@ -157,11 +157,11 @@
       text-indent: -9999px;
       overflow: hidden;
       transition: transform 0.3s ease;
-      text-shadow: 0 0 5px #fff, 0 0 10px #ff69b4, 0 0 15px #ff69b4;
+      filter: drop-shadow(0 0 5px #fff) drop-shadow(0 0 10px #ff69b4);
     }
     .discord-logo:hover {
       transform: scale(1.05);
-      text-shadow: 0 0 5px #fff, 0 0 10px #ff69b4, 0 0 15px #ff69b4;
+      filter: drop-shadow(0 0 10px #fff) drop-shadow(0 0 20px #ff69b4);
     }
     #audio-controls {
       position: absolute;
