--- a/index.html
+++ b/index.html
@@ -216,10 +216,30 @@
         transform: scale(0.5) translateY(-10px);
       }
     }
+    .shooting-star {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url('https://cdn.pixabay.com/photo/2014/12/20/10/22/shooting-star-576213_960_720.png') no-repeat center center;
+      animation: shootingStarGlow 5s linear infinite;
+    }
+    @keyframes shootingStarGlow {
+      0% {
+        opacity: 0;
+        transform: translateY(0);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(100vh);
+      }
+    }
   </style>
 </head>
 <body>
   <button class="intro-screen glow" id="intro-screen" aria-label="Enter site">click to enter</button>
+  <div class="shooting-star"></div>
   <video id="background-video" playsinline webkit-playsinline loop preload="metadata">
     <source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/0422%20(1).mp4" type="video/mp4">
   </video>
@@ -227,7 +247,7 @@
     <img src="https://pub-3bfa94b368d34d7e839934cc455b9712.r2.dev/ec8682c3a3959691f9506c79de83c2f0.png" alt="pfp" class="pfp">
     <div class="title">JuJu.wtf</div>
     <div class="discord-wrapper">
-      <a href="https://discord.gg/UfVueQFRcD" class="discord-logo" aria-label="discord">discord</a>
+      <a href="https://discord.gg/UfVueQFRcD" class="discord-logo" aria-label="discord" target="_blank">discord</a>
       <div class="discord-tooltip">Invite to JuJu Fanclub</div>
     </div>
   </div>
