--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #0a0a0a;
+      background-color: #000;
       color: #fff;
       font-family: Inter, sans-serif;
       height: 100vh;
@@ -224,6 +224,7 @@
       height: 100%;
       background: url('https://cdn.pixabay.com/photo/2014/12/20/10/22/shooting-star-576213_960_720.png') no-repeat center center;
       animation: shootingStarGlow 5s linear infinite;
+      z-index: 2;
     }
     @keyframes shootingStarGlow {
       0% {
